added db connection and seeded users table with template user

--- a/souls-similar-ranking/package.json
+++ b/souls-similar-ranking/package.json
@@ -2,14 +2,17 @@
   "name": "souls-similar-ranking",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed": "node ./src/Server/database/seed.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -24,5 +27,17 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/KadenReynolds/SoulsSimilarRanking.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KadenReynolds/SoulsSimilarRanking/issues"
+  },
+  "homepage": "https://github.com/KadenReynolds/SoulsSimilarRanking#readme"
 }
