--- a/souls-similar-ranking/package.json
+++ b/souls-similar-ranking/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon src/Server/main.js -w src/Server",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-express": "*",
+    "volleyball": "^1.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
