--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"nodemon src/Server/main.js -w src/Server\" \"vite\"",
-    "build": "vite build",
+    "build": "concurrently \"nodemon src/Server/main.js -w src/Server\" \"vite build\"",
     "lint": "eslint .",
     "preview": "vite preview",
     "seed": "node ./src/Server/database/seed.js"
